--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
   "author": "The Maru OS Project Authors",
   "license": "Apache-2.0",
   "devDependencies": {
-    "vuepress": "^0.14.11"
+    "@vuepress/plugin-google-analytics": "^1.4.1",
+    "vuepress": "^1.4.1"
   }
 }
