Let dependabot to update vuepress packages together
Signed-off-by: utzcoz <utzcoz@outlook.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,12 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      vuepress-packages:
+        patterns:
+          - "vuepress*"
+          - "@vuepress/*"
+          - "vuepress-*"
+        update-types:
+          - "minor"
+          - "patch"
