Add new pattern vuepress for dependabot
Signed-off-by: utzcoz <utzcoz@outlook.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,7 @@ updates:
     groups:
       vuepress-packages:
         patterns:
+          - "vuepress"
           - "vuepress*"
           - "@vuepress/*"
           - "vuepress-*"
